--- a/app/src/main/res/layout/layout_wb_management_item.xml
+++ b/app/src/main/res/layout/layout_wb_management_item.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_margin="@dimen/px5"
-            android:orientation="vertical">
+            android:background="@drawable/cr_corner_doc_bg"
+            android:orientation="vertical"
+            android:layout_margin="@dimen/px12">
 
         <TextView
                 android:id="@+id/wb_title"
                 android:lines="1"
                 android:ellipsize="end"
-                android:padding="@dimen/px10"
+                android:paddingLeft="@dimen/px12"
+                android:paddingRight="@dimen/px12"
+                android:paddingTop="@dimen/px20"
+                android:textColor="@color/font_black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
 
         <ImageView
                 android:id="@+id/wb_cover"
-                android:layout_margin="@dimen/px10"
+                android:layout_margin="@dimen/px12"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
     </LinearLayout>
@@ -32,6 +35,7 @@
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:src="@drawable/ic_cr_remove_wb"/>
 
 </RelativeLayout>
