--- a/app/src/main/res/layout/layout_classroom_setting.xml
+++ b/app/src/main/res/layout/layout_classroom_setting.xml
@@ -15,7 +15,9 @@
                 android:text="@string/class_room_setting"
                 android:textSize="@dimen/font_32px"
                 android:textColor="@color/font_black"
-                android:padding="@dimen/px30"/>
+                android:paddingLeft="@dimen/px30"
+                android:paddingTop="@dimen/px34"
+                android:paddingBottom="@dimen/px34"/>
 
         <View
                 style="@style/DividerHorizontal"/>
@@ -34,9 +36,10 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_cr_camera_setting"
                     android:text="@string/camera"
-                    android:drawablePadding="@dimen/px12"
+                    android:drawablePadding="@dimen/px20"
                     android:textColor="@color/font_gray"
-                    android:minWidth="@dimen/px300"/>
+                    android:textSize="@dimen/font_28px"
+                    android:minWidth="@dimen/px260"/>
 
             <ToggleButton
                     android:id="@+id/camera_switcher"
@@ -61,9 +64,10 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_cr_micro_setting"
                     android:text="@string/microphone"
-                    android:drawablePadding="@dimen/px12"
+                    android:drawablePadding="@dimen/px20"
                     android:textColor="@color/font_gray"
-                    android:minWidth="@dimen/px300"/>
+                    android:textSize="@dimen/font_28px"
+                    android:minWidth="@dimen/px260"/>
 
             <ToggleButton
                     android:id="@+id/microphone_switcher"
@@ -85,14 +89,16 @@
                 android:paddingTop="@dimen/px20"
                 android:paddingBottom="@dimen/px20"
                 android:textColor="@color/font_gray"
-                android:minWidth="@dimen/px300"/>
+                android:minWidth="@dimen/px300"
+                android:visibility="gone"/>
 
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/px30"
                 android:paddingRight="@dimen/px30"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
             <TextView
                     android:id="@+id/full_screen"
@@ -133,9 +139,10 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_cr_chat_setting"
                     android:text="@string/class_room_chat"
-                    android:drawablePadding="@dimen/px12"
+                    android:drawablePadding="@dimen/px20"
                     android:textColor="@color/font_gray"
-                    android:minWidth="@dimen/px300"/>
+                    android:textSize="@dimen/font_28px"
+                    android:minWidth="@dimen/px260"/>
 
             <ToggleButton
                     android:id="@+id/class_room_chat"
@@ -151,13 +158,13 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_cr_resolution_setting"
                 android:text="@string/video_resolution"
-                android:drawablePadding="@dimen/px12"
+                android:drawablePadding="@dimen/px20"
                 android:paddingLeft="@dimen/px30"
                 android:paddingRight="@dimen/px30"
                 android:paddingTop="@dimen/px20"
                 android:paddingBottom="@dimen/px20"
                 android:textColor="@color/font_gray"
-                android:minWidth="@dimen/px300"/>
+                android:textSize="@dimen/font_30px"/>
 
         <LinearLayout
                 android:layout_width="wrap_content"
@@ -172,10 +179,12 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/single_check_selector"
                     android:text="@string/fluent"
-                    android:drawablePadding="@dimen/px12"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="@dimen/px16"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
-                    android:textColor="@color/font_gray"/>
+                    android:textColor="@color/font_gray"
+                    android:textSize="@dimen/font_28px"/>
 
             <TextView
                     android:id="@+id/standard_definition"
@@ -183,11 +192,13 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/single_check_selector"
                     android:text="@string/standard_definition"
-                    android:drawablePadding="@dimen/px12"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="@dimen/px16"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:textColor="@color/font_gray"
-                    android:layout_marginLeft="@dimen/px100"/>
+                    android:textSize="@dimen/font_28px"
+                    android:layout_marginLeft="@dimen/px56"/>
 
             <TextView
                     android:id="@+id/high_definition"
@@ -195,11 +206,13 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/single_check_selector"
                     android:text="@string/high_definition"
-                    android:drawablePadding="@dimen/px12"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="@dimen/px16"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:textColor="@color/font_gray"
-                    android:layout_marginLeft="@dimen/px100"/>
+                    android:textSize="@dimen/font_28px"
+                    android:layout_marginLeft="@dimen/px56"/>
 
         </LinearLayout>
 
