--- a/app/src/main/res/layout/layout_classroom_course_ware.xml
+++ b/app/src/main/res/layout/layout_classroom_course_ware.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
+              android:layout_width="@dimen/px525"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:background="@color/classroom_main_gray"
@@ -18,7 +18,7 @@
 
     <ListView
             android:id="@+id/course_ware_list"
-            android:layout_width="@dimen/px500"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
     </ListView>
